<resources>
    <string name="app_name">Ande</string>

    <!--Options of tab bar-->
    <string name="tab_account">Perfil</string>
    <string name="tab_dashboard">Início</string>
    <string name="tab_history">Histórico</string>

    <!--Toast texts alerts-->
    <string name="toast_exit_alert">Pressione novamente para sair</string>

    <!--Hints Profile-->
    <string name="hint_name">Nome</string>
    <string name="hint_birthdate">Data de nascimento</string>
    <string name="hint_email">Email</string>

    <!--Common Text-->
    <string name="btn_save">salvar</string>

    <!--validate msg errors-->
    <string name="error_empty_name">digite seu nome</string>
    <string name="error_empty_birth">digite sua data de nascimento</string>
    <string name="error_empty_email">digite seu email</string>
    <string name="error_format_email">digite uma email válido</string>
    <string name="error_registered_email">este email já esta em uso</string>

    <!--walk dashboard-->
    <string name="user_name">Olá, visitante!</string>
    <string name="steps_count">... caminhada(s) registrada(s)</string>
    <string name="steps_count_null">nenhum resgistro encontrado</string>
    <string name="intro_last_walke">última caminhada</string>
    <string name="last_walk">você deu</string>
    <string name="last_walk_compl">passo(s) em sua última caminhada</string>
    <string name="last_steps_mark">0</string>
    <string name="initial_steps_mark">0</string>
    <string name="intro_actual_walk">caminhada atual</string>
    <string name="walk_actual_steps">passos</string>
    <string name="duration_of_walk">Sua caminhada durou</string>
    <string name="initial_duration_mark">...h e ...m</string>

    <!--history-->
    <string name="history_title">Suas caminhadas</string>

    <!--EmptyState-->
    <string name="empty_state_history_title">Ainda sem andar?</string>
    <string name="empty_state_history_msg">Parece que você ainda não tem registros das suas caminhadas. Para começar, basta andar por ai ;)</string>

    <!--Splash Screen-->
    <string name="splash_title">Bem-vindo!</string>
    <string name="splash_msg">O Ande te ajuda a monitorar seus passos e mostra o quanto eles são importantes para a sua saúde.</string>

    <!--Local common message-->
    <string name="local_title">Olá, ...!</string>
    <string name="local_msg">Registramos uma caminhada de {steps} passo(s) com duração de {time}</string>
    <string name="local_msg_first_line">Registramos uma caminhada de</string>
    <string name="local_msg_second_line">{steps} passo(s) em {time}</string>

    <!--history strings-->
    <string name="history_description" formatted="false">%1$tA, %1$td de %1$tb/%1$tY</string>
    <string name="history_description_today" formatted="false">hoje, %1$te de %1$tb/%1$tY</string>
    <string name="history_description_steps">passo(s) até o momento</string>
    <string name="history_description_steps_finished">passos dados</string>
    <string name="history_distance_description" formatted="false">%d km</string>

    <!--Permission's texts-->
    <string name="permission_location_title">Podemos usar sua localização?</string>
    <string name="permission_location_explain">Pedimos essa permissão para que possamos localizar seu ponto de partida e chegada das suas caminhadas.</string>

    <!--First Access Page-->
    <string name="intro_first_access_title">Olá!</string>
    <string name="intro_first_access_desc">Calculamos sua evolução baseado em algumas informações pessoais. Por isso, precisamos conhecê-lo um pouco mais ;)</string>
    <string name="intro_first_access_action">vamos lá?</string>
    <string name="new_user_title">Seu primeiro acesso?</string>
    <string name="new_user_desc">toque aqui para informar seus dados.</string>
    <string name="recover_user_title">Já tem uma conta?</string>
    <string name="recover_user_desc">toque aqui para recuperar a sua conta.</string>

</resources>
