<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:layout_marginBottom="@dimen/margin_small"
    app:elevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txPassos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_steps_mark"
                android:textSize="@dimen/font_large"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/walk_actual_steps"
                android:textSize="@dimen/font_big"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_of_walk"
                android:textSize="@dimen/font_big"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/initial_duration_mark"
                android:textSize="@dimen/font_large"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>