<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="br.com.ande.ui.view.activity.FirstAccessActivity">

    <LinearLayout
        android:id="@+id/containerIntro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/margin_default">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="@dimen/img_user_icon"
            android:layout_height="@dimen/img_user_icon"
            android:layout_marginBottom="@dimen/margin_default"
            app:lottie_fileName="outline_user.json"
            app:lottie_loop="false"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/white"/>

        <LinearLayout
            android:id="@+id/containerAnimation"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:focusable="false"
            android:alpha="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/intro_first_access_title"
                android:textSize="@dimen/font_large"
                android:textColor="@color/white"
                android:focusable="true"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/intro_first_access_desc"
                android:textAlignment="center"
                android:focusable="false"
                android:textSize="@dimen/font_big"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_extra_big"
                android:layout_marginBottom="@dimen/margin_default"
                android:paddingLeft="@dimen/margin_extra"
                android:paddingRight="@dimen/margin_extra"
                android:background="@drawable/buttom_bg_default"
                android:text="@string/intro_first_access_action"
                android:textAllCaps="false"
                android:focusable="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_default"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:alpha="0"
        android:focusable="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/containerNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_big"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/buttom_bg_reverse">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_add_white_48dp"
                android:layout_marginRight="@dimen/margin_default"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_micro"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user_title"
                        android:textSize="@dimen/font_title"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user_desc"
                        android:layout_marginTop="@dimen/margin_micro"
                        android:textSize="@dimen/font_big"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerRecoverUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttom_bg_reverse"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/margin_default"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_default"
                android:src="@drawable/ic_person_white_48dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_micro"
                        android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recover_user_title"
                        android:textSize="@dimen/font_title"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recover_user_desc"
                        android:layout_marginTop="@dimen/margin_micro"
                        android:textSize="@dimen/font_big"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
